[gd_scene load_steps=11 format=3 uid="uid://det64ltelxgj8"]

[ext_resource type="Script" uid="uid://drfnyqhrabudn" path="res://scenes/town/townUI.gd" id="1_ki453"]
[ext_resource type="Texture2D" uid="uid://wdneset53t7e" path="res://assets/ui/town/TownFull.png" id="2_ki453"]
[ext_resource type="Texture2D" uid="uid://6oa1s5tru2xe" path="res://assets/ui/town/TavernGlow.png" id="3_qvgpt"]
[ext_resource type="Script" uid="uid://b64y2x7228jat" path="res://scenes/town/tavern_click_zone.gd" id="3_uiijs"]
[ext_resource type="Texture2D" uid="uid://coc7iptaf0sum" path="res://assets/ui/town/MarketGlow.png" id="4_25glc"]
[ext_resource type="Script" uid="uid://d24m3t07ee201" path="res://scenes/town/trade_click_zone.gd" id="5_n5615"]
[ext_resource type="Texture2D" uid="uid://c6hl6kulg70yv" path="res://assets/ui/town/ShipyardHover.png" id="7_8mv33"]
[ext_resource type="Script" uid="uid://b70s7ifoilayp" path="res://scenes/town/shipyard_click_zone.gd" id="7_lersf"]
[ext_resource type="Script" uid="uid://o4mp706v1hhr" path="res://scenes/town/leave_click_zone.gd" id="7_tr5gk"]
[ext_resource type="Texture2D" uid="uid://de3fy8f751bug" path="res://assets/ui/town/LeaveGlow.png" id="10_v3pdc"]

[node name="Town" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ki453")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundArt" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ki453")
metadata/_edit_use_anchors_ = true

[node name="TavernClickZone" type="ColorRect" parent="CanvasLayer"]
offset_right = 218.0
offset_bottom = 409.0
tooltip_text = "Enter the tavern"
color = Color(1, 1, 1, 0)
script = ExtResource("3_uiijs")

[node name="TavernGlow" type="TextureRect" parent="CanvasLayer/TavernClickZone"]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("3_qvgpt")

[node name="TradeClickZone" type="ColorRect" parent="CanvasLayer"]
offset_left = 333.0
offset_top = 165.0
offset_right = 487.0
offset_bottom = 317.0
tooltip_text = "Enter the market"
color = Color(1, 1, 1, 0)
script = ExtResource("5_n5615")

[node name="TradeGlow" type="TextureRect" parent="CanvasLayer/TradeClickZone"]
visible = false
layout_mode = 0
offset_left = -333.0
offset_top = -165.0
offset_right = 947.0
offset_bottom = 555.0
mouse_filter = 2
texture = ExtResource("4_25glc")

[node name="QuestClickZone" type="ColorRect" parent="CanvasLayer"]
offset_left = 668.0
offset_top = 207.0
offset_right = 881.0
offset_bottom = 427.0
tooltip_text = "Look at quests"
color = Color(1, 1, 1, 0)

[node name="ShipyardClickZone" type="ColorRect" parent="CanvasLayer"]
offset_left = 894.0
offset_top = -39.0
offset_right = 1280.0
offset_bottom = 232.0
tooltip_text = "Enter the shipyard"
color = Color(1, 1, 1, 0)
script = ExtResource("7_lersf")

[node name="ShipyardGlow" type="TextureRect" parent="CanvasLayer/ShipyardClickZone"]
visible = false
layout_mode = 0
offset_left = -894.0
offset_top = 39.0
offset_right = 386.0
offset_bottom = 759.0
mouse_filter = 2
texture = ExtResource("7_8mv33")

[node name="LeaveClickZone" type="ColorRect" parent="CanvasLayer"]
offset_top = 462.0
offset_right = 1281.0
offset_bottom = 718.0
tooltip_text = "Set sail"
color = Color(1, 1, 1, 0)
script = ExtResource("7_tr5gk")

[node name="LeaveGlow" type="TextureRect" parent="CanvasLayer/LeaveClickZone"]
visible = false
layout_mode = 0
offset_top = -462.0
offset_right = 1280.0
offset_bottom = 258.0
mouse_filter = 2
texture = ExtResource("10_v3pdc")

[connection signal="gui_input" from="CanvasLayer/TavernClickZone" to="CanvasLayer/TavernClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/TavernClickZone" to="CanvasLayer/TavernClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TavernClickZone" to="CanvasLayer/TavernClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/TradeClickZone" to="CanvasLayer/TradeClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/TradeClickZone" to="CanvasLayer/TradeClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TradeClickZone" to="CanvasLayer/TradeClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/ShipyardClickZone" to="CanvasLayer/ShipyardClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/ShipyardClickZone" to="CanvasLayer/ShipyardClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ShipyardClickZone" to="CanvasLayer/ShipyardClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/LeaveClickZone" to="CanvasLayer/LeaveClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/LeaveClickZone" to="CanvasLayer/LeaveClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LeaveClickZone" to="CanvasLayer/LeaveClickZone" method="_on_mouse_exited"]
